k8s_flask/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:ap-south-1:905418365519:certificate/4273d2bd-b802-4901-9f5c-1111cdf0a406"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: "ELBSecurityPolicy-2016-08"
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
    - name: https
      port: 443
      targetPort: 5000
